--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -120,7 +120,7 @@ jobs:
           release_name: ${{ needs.prepare-version.outputs.newVersion }} dev version
           body_path: Technical/release_base.md
           draft: false
-          prerelease: true
+          prerelease: false
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
