--- a/KoOrderRegister/KoOrderRegister.csproj
+++ b/KoOrderRegister/KoOrderRegister.csproj
@@ -47,9 +47,14 @@
 		<AppInstallerUri>https://api.github.com/repos/BenKoncsik/KoOrderRegister/releases/latest</AppInstallerUri>
 		<HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
 		<DefaultLanguage>en</DefaultLanguage>
-		
-	
-		
+
+		<PropertyGroup>
+			<PackageCertificateKeyFile>Technical/kor.pfx</PackageCertificateKeyFile>
+			<PackageCertificateThumbprint>52E6E26AD745DE7F7EB2CDC031509D57F78CEBF8</PackageCertificateThumbprint>
+			<PackageCertificatePassword>kor</PackageCertificatePassword>
+		</PropertyGroup>
+
+
 	</PropertyGroup>
 	<!-- Windows publish -->
 	<PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows' and '$(Configuration)' == 'Release'">
