--- a/KoOrderRegister/KoOrderRegister.csproj
+++ b/KoOrderRegister/KoOrderRegister.csproj
@@ -48,11 +48,15 @@
 		<HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
 		<DefaultLanguage>en</DefaultLanguage>
 
-		<PropertyGroup>
-			<PackageCertificateKeyFile>Technical/kor.pfx</PackageCertificateKeyFile>
-			<PackageCertificateThumbprint>52E6E26AD745DE7F7EB2CDC031509D57F78CEBF8</PackageCertificateThumbprint>
-			<PackageCertificatePassword>kor</PackageCertificatePassword>
-		</PropertyGroup>
+	</PropertyGroup>
+
+
+	<PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">
+		<PackageCertificateKeyFile>Technical/kor.pfx</PackageCertificateKeyFile>
+		<PackageCertificateThumbprint>52E6E26AD745DE7F7EB2CDC031509D57F78CEBF8</PackageCertificateThumbprint>
+		<PackageCertificatePassword>kor</PackageCertificatePassword>
+	</PropertyGroup>
+
 
 
 	</PropertyGroup>
