--- a/KoOrderRegister/KoOrderRegister.csproj
+++ b/KoOrderRegister/KoOrderRegister.csproj
@@ -52,9 +52,9 @@
 
 
 	<PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">
-		<PackageCertificateKeyFile>Technical/kor.pfx</PackageCertificateKeyFile>
+		<!--<PackageCertificateKeyFile>Technical/kor.pfx</PackageCertificateKeyFile>
 		<PackageCertificateThumbprint>52E6E26AD745DE7F7EB2CDC031509D57F78CEBF8</PackageCertificateThumbprint>
-		<PackageCertificatePassword>kor</PackageCertificatePassword>
+		<PackageCertificatePassword>kor</PackageCertificatePassword>-->
 		
 		<AppxPackageSigningEnabled>true</AppxPackageSigningEnabled>
 		<PublishSingleFile>false</PublishSingleFile>
