--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,13 +1,16 @@
 name: Publish_DEV
 
 env:
-  branch-name: 'develop'
+  branch-name: '145-add-dev-and-stabil-version-checker'
   varrible: 'DEV_VERSION'
 
 on:
+ push:
+    branches:
+      - 145-add-dev-and-stabil-version-checker
   pull_request:
     branches:
-      - develop
+     - 145-add-dev-and-stabil-version-checker
 permissions:
   contents: write
   pull-requests: write
@@ -60,14 +63,7 @@ jobs:
           echo "minorVersion=$MINOR" >> $GITHUB_OUTPUT
           echo newVersion: $NEW_VERSION
           echo versionCode: $MAJOR
-          echo minorVersion: $MINOR
-          gh api \
-            --method PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
-            -f "name=DEV_VERSION" -f "value=$NEW_VERSION"
-            
+          echo minorVersion: $MINOR            
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
           NEW_PATCH: ${{ env.new-minor }}    
@@ -104,28 +100,7 @@ jobs:
           NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
           NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
           BUILD_VERSION: ${{ env.varrible }}
-      - name: Install GitHub CLI
-        run: |
-          $cliUri = "https://github.com/cli/cli/releases/download/v2.57.0/gh_2.57.0_windows_amd64.msi"
-          $cliPath = "$env:TEMP\gh_2.57.0_windows_amd64.msi"
-          Invoke-WebRequest -Uri $cliUri -OutFile $cliPath
-          Start-Process msiexec.exe -Wait -ArgumentList "/i $cliPath /quiet"
-          $ghPath = "C:\Program Files\GitHub CLI"
-          Write-Output "PATH=$ghPath;$env:PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        shell: powershell
 
-      - name: Create or Update Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: output/*.apk,output/*.msix,KoOrderRegister/Technical/kor.pfx
-          tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minorVersion }}.dev
-          release_name: ${{ needs.prepare-version.outputs.newVersion }}
-          body_path: Technical/release_base.md
-          draft: false
-          prerelease: false
-          generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
 
 
