--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,14 +1,16 @@
-name: Publish
+name: Publish_DEV_TEST
 
 env:
-  branch-name: 'main'
-  varrible: 'STABIL_VERSION'
-  dev-version: 'DEV_VERSION'
+  branch-name: '145-add-dev-and-stabil-version-checker'
+  varrible: 'DEV_VERSION'
 
 on:
+  push:
+    branches:
+      - 145-add-dev-and-stabil-version-checker
   pull_request:
     branches:
-      - main
+     - 145-add-dev-and-stabil-version-checker
 permissions:
   contents: write
   pull-requests: write
@@ -28,7 +30,7 @@ jobs:
           VERSION=$(gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
             --jq '.value')
           echo "Current version: $VERSION"
           if [[ -z "$VERSION" ]]; then
@@ -45,39 +47,26 @@ jobs:
       - name: Increment the MINOR version
         id: increment-minor
         run: |
-          NEW_MINOR=$((MINOR + 1))
-          echo "New MINOR version: $NEW_MINOR"
-          echo "new-minor=$NEW_MINOR" >> $GITHUB_ENV
+          NEW_PATCH=$((PATCH + 1))
+          echo "New MINOR version: $NEW_PATCH"
+          echo "new-minor=$NEW_PATCH" >> $GITHUB_ENV
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Update the version using GitHub CLI
         id: version
         run: |
-          NEW_VERSION="$MAJOR.$NEW_MINOR.$PATCH"
+          NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
           echo "Updating version to: $NEW_VERSION"
           echo "newVersion=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "versionCode=$MAJOR" >> $GITHUB_OUTPUT
-          echo "minorVersion=$NEW_MINOR" >> $GITHUB_OUTPUT
+          echo "minorVersion=$MINOR" >> $GITHUB_OUTPUT
           echo newVersion: $NEW_VERSION
           echo versionCode: $MAJOR
-          echo minorVersion: $NEW_MINOR
-          gh api \
-            --method PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
-            -f "name=STABIL_VERSION" -f "value=$NEW_VERSION"
-            
-            gh api \
-            --method PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
-            -f "name=DEV_VERSION" -f "value=$NEW_VERSION"
+          echo minorVersion: $MINOR            
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
-          NEW_MINOR: ${{ env.new-minor }}    
+          NEW_PATCH: ${{ env.new-minor }}    
         
         
   build:
@@ -111,28 +100,7 @@ jobs:
           NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
           NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
           BUILD_VERSION: ${{ env.varrible }}
-      - name: Install GitHub CLI
-        run: |
-          $cliUri = "https://github.com/cli/cli/releases/download/v2.57.0/gh_2.57.0_windows_amd64.msi"
-          $cliPath = "$env:TEMP\gh_2.57.0_windows_amd64.msi"
-          Invoke-WebRequest -Uri $cliUri -OutFile $cliPath
-          Start-Process msiexec.exe -Wait -ArgumentList "/i $cliPath /quiet"
-          $ghPath = "C:\Program Files\GitHub CLI"
-          Write-Output "PATH=$ghPath;$env:PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        shell: powershell
 
-      - name: Create or Update Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: output/*.apk,output/*.msix,KoOrderRegister/Technical/kor.pfx
-          tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minorVersion }}
-          release_name: ${{ needs.prepare-version.outputs.newVersion }}
-          body_path: Technical/release_base.md
-          draft: false
-          prerelease: false
-          generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
 
 
