--- a/.github/workflows/test_async.yaml
+++ b/.github/workflows/test_async.yaml
@@ -129,7 +129,8 @@ jobs:
           path: output\*.msix
 
   release:
-    runs-on: ubuntu-latest
+   # runs-on: ubuntu-latest
+    runs-on: [self-hosted, Windows]
     needs: [build-apk, build-msix]
     steps:
       - name: Download APK Artifact
