--- a/.github/workflows/test_async.yaml
+++ b/.github/workflows/test_async.yaml
@@ -134,7 +134,7 @@ jobs:
     needs: [prepare-version, build-apk, build-msix]
     steps:
       - name: Delete output
-        run: if (-Not (Test-Path -Path output)) { rm output }
+        run: if (-Not (Test-Path -Path output)) { rmdir /q/s output }
       - name: Download APK Artifact
         uses: actions/download-artifact@v3
         with:
