--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -8,6 +8,11 @@ on:
   pull_request:
     branches:
       - develop
+  workflow_run:
+    workflows: ["Publish"] 
+    types:
+      - completed
+
 permissions:
   contents: write
   pull-requests: write
