--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -8,6 +8,9 @@ on:
   pull_request:
     branches:
       - develop
+  merge_request:
+    branches:
+      - develop
   workflow_run:
     workflows: ["Publish"] 
     types:
