#202 add icon creator, add icons

--- a/KoOrderRegister/KoOrderRegister.csproj
+++ b/KoOrderRegister/KoOrderRegister.csproj
@@ -147,14 +147,24 @@
 		<None Remove="Resources\Images\cloud_off_light.svg" />
 		<None Remove="Resources\Images\copy_dark.svg" />
 		<None Remove="Resources\Images\copy_light.svg" />
+		<None Remove="Resources\Images\csv_dark.svg" />
+		<None Remove="Resources\Images\csv_light.svg" />
+		<None Remove="Resources\Images\data_dark.svg" />
+		<None Remove="Resources\Images\data_light.svg" />
+		<None Remove="Resources\Images\group_dark.svg" />
+		<None Remove="Resources\Images\group_light.svg" />
 		<None Remove="Resources\Images\key_dark.svg" />
 		<None Remove="Resources\Images\key_light.svg" />
+		<None Remove="Resources\Images\labs_dark.svg" />
+		<None Remove="Resources\Images\labs_light.svg" />
 		<None Remove="Resources\Images\notification_dark.svg" />
 		<None Remove="Resources\Images\notification_light.svg" />
 		<None Remove="Resources\Images\not_shared_icon_dark.svg" />
 		<None Remove="Resources\Images\not_shared_icon_light.svg" />
 		<None Remove="Resources\Images\open_dark.svg" />
 		<None Remove="Resources\Images\open_light.svg" />
+		<None Remove="Resources\Images\orders_dark.svg" />
+		<None Remove="Resources\Images\orders_light.svg" />
 		<None Remove="Resources\Images\pause_dark.svg" />
 		<None Remove="Resources\Images\pause_light.svg" />
 		<None Remove="Resources\Images\play_dark.svg" />
@@ -165,6 +175,8 @@
 		<None Remove="Resources\Images\return_light.svg" />
 		<None Remove="Resources\Images\save_dark.svg" />
 		<None Remove="Resources\Images\save_light.svg" />
+		<None Remove="Resources\Images\settings_dark.svg" />
+		<None Remove="Resources\Images\settings_light.svg" />
 		<None Remove="Resources\Images\shared_icon_dark.svg" />
 		<None Remove="Resources\Images\shared_icon_light.svg" />
 		<None Remove="Resources\Images\sync_dark.svg" />
