--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ KoOrderRegister/bin
 KoOrerRegister
 output
 KoOrderRegister/Technical/icon_creator/input
+KoOrderRegister/Technical/icon_creator/output
