202 add menu icons (#205)
* #202 add icon creator, add icons

* #77 add Optimize

* #202 update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ KoOrderRegister/bin
 KoOrerRegister
 output
 KoOrderRegister/Technical/icon_creator/input
+KoOrderRegister/Technical/icon_creator/output
+
