--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ KoOrderRegister/obj
 KoOrderRegister/bin
 KoOrerRegister
 output
+KoOrderRegister/Technical/icon_creator/input
+KoOrderRegister/Technical/icon_creator/output
+
