--- a/KoOrderRegister/KoOrderRegister.csproj
+++ b/KoOrderRegister/KoOrderRegister.csproj
@@ -33,7 +33,7 @@
 		<ApplicationId Condition="'$(Configuration)' == 'DevBuild'">hu.kncsk.devbuild.koorderregister</ApplicationId>
 
 		<!-- Versions -->
-		<ApplicationDisplayVersion>2.1.1</ApplicationDisplayVersion>
+		<ApplicationDisplayVersion>999.999.999</ApplicationDisplayVersion>
 		<ApplicationVersion>2</ApplicationVersion>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
@@ -87,6 +87,10 @@
 		<AndroidApiLevel>34</AndroidApiLevel>
 		<UseMaui>true</UseMaui>
 		<SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
+
+
+		<Optimize>true</Optimize>
+		<EnableUnsafeBinaryFormatterSerialization>false</EnableUnsafeBinaryFormatterSerialization>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -107,6 +111,15 @@
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <AndroidResource Remove="Modules\Export\Services\**" />
+	  <Compile Remove="Modules\Export\Services\**" />
+	  <EmbeddedResource Remove="Modules\Export\Services\**" />
+	  <MauiCss Remove="Modules\Export\Services\**" />
+	  <MauiXaml Remove="Modules\Export\Services\**" />
+	  <None Remove="Modules\Export\Services\**" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -135,28 +148,34 @@
 		<None Remove="Platforms\Windows\Splash\%24placeholder%24.scale-150.png" />
 		<None Remove="Platforms\Windows\Splash\%24placeholder%24.scale-200.png" />
 		<None Remove="Platforms\Windows\Splash\%24placeholder%24.scale-400.png" />
-		<None Remove="Resources\Images\add_dark.svg" />
-		<None Remove="Resources\Images\add_light.svg" />
-		<None Remove="Resources\Images\ai_dark.svg" />
-		<None Remove="Resources\Images\ai_light.svg" />
-		<None Remove="Resources\Images\ai_off_dark.svg" />
-		<None Remove="Resources\Images\ai_off_light.svg" />
 		<None Remove="Resources\Images\cloud_dark.svg" />
 		<None Remove="Resources\Images\cloud_light.svg" />
 		<None Remove="Resources\Images\cloud_off_dark.svg" />
 		<None Remove="Resources\Images\cloud_off_light.svg" />
 		<None Remove="Resources\Images\copy_dark.svg" />
 		<None Remove="Resources\Images\copy_light.svg" />
+		<None Remove="Resources\Images\csv_dark.svg" />
+		<None Remove="Resources\Images\csv_light.svg" />
+		<None Remove="Resources\Images\data_dark.svg" />
+		<None Remove="Resources\Images\data_light.svg" />
+		<None Remove="Resources\Images\group_dark.svg" />
+		<None Remove="Resources\Images\group_light.svg" />
 		<None Remove="Resources\Images\key_dark.svg" />
 		<None Remove="Resources\Images\key_light.svg" />
+		<None Remove="Resources\Images\labs_dark.svg" />
+		<None Remove="Resources\Images\labs_light.svg" />
 		<None Remove="Resources\Images\notification_dark.svg" />
 		<None Remove="Resources\Images\notification_light.svg" />
 		<None Remove="Resources\Images\not_shared_icon_dark.svg" />
 		<None Remove="Resources\Images\not_shared_icon_light.svg" />
 		<None Remove="Resources\Images\open_dark.svg" />
 		<None Remove="Resources\Images\open_light.svg" />
+		<None Remove="Resources\Images\orders_dark.svg" />
+		<None Remove="Resources\Images\orders_light.svg" />
 		<None Remove="Resources\Images\pause_dark.svg" />
 		<None Remove="Resources\Images\pause_light.svg" />
+		<None Remove="Resources\Images\pdf_dark.svg" />
+		<None Remove="Resources\Images\pdf_light.svg" />
 		<None Remove="Resources\Images\play_dark.svg" />
 		<None Remove="Resources\Images\play_light.svg" />
 		<None Remove="Resources\Images\qr_code_dark.svg" />
@@ -165,6 +184,8 @@
 		<None Remove="Resources\Images\return_light.svg" />
 		<None Remove="Resources\Images\save_dark.svg" />
 		<None Remove="Resources\Images\save_light.svg" />
+		<None Remove="Resources\Images\settings_dark.svg" />
+		<None Remove="Resources\Images\settings_light.svg" />
 		<None Remove="Resources\Images\shared_icon_dark.svg" />
 		<None Remove="Resources\Images\shared_icon_light.svg" />
 		<None Remove="Resources\Images\sync_dark.svg" />
@@ -173,6 +194,8 @@
 		<None Remove="Resources\Images\update_light.svg" />
 		<None Remove="Resources\Images\upload_dark.svg" />
 		<None Remove="Resources\Images\upload_light.svg" />
+		<None Remove="Resources\Images\web_dark.svg" />
+		<None Remove="Resources\Images\web_light.svg" />
 		<None Remove="Resources\Images\x_dark.svg" />
 		<None Remove="Resources\Images\x_light.svg" />
 	</ItemGroup>
@@ -212,11 +235,11 @@
 	<ItemGroup>
 		<PackageReference Include="ClosedXML" Version="0.104.1" />
 		<PackageReference Include="CommunityToolkit.Maui" Version="9.1.0" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.91" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.91" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-		<PackageReference Include="Mopups" Version="1.3.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
+		<PackageReference Include="Mopups" Version="1.3.2" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 	</ItemGroup>
@@ -233,8 +256,14 @@
 		<Compile Update="Modules\DatabaseFile\Page\FilePropertiesPopup.xaml.cs">
 			<DependentUpon>FilePropertiesPopup.xaml</DependentUpon>
 		</Compile>
-		<Compile Update="Modules\Export\Pages\ExportersPage.xaml.cs">
-		  <DependentUpon>ExportersPage.xaml</DependentUpon>
+		<Compile Update="Modules\Export\Exporters\Excel\View\Pages\ExcelExportersPage.xaml.cs">
+		  <DependentUpon>ExcelExportersPage.xaml</DependentUpon>
+		</Compile>
+		<Compile Update="Modules\Export\Exporters\Html\View\Pages\HtmlExportersPage.xaml.cs">
+		  <DependentUpon>HtmlExportersPage.xaml</DependentUpon>
+		</Compile>
+		<Compile Update="Modules\Export\Exporters\Pdf\View\Pages\PdfExportersPage.xaml.cs">
+		  <DependentUpon>PdfExportersPage.xaml</DependentUpon>
 		</Compile>
 		<Compile Update="Platforms\Android\Services\UpdateService.cs">
 			<ExcludeFromCurrentConfiguration>true</ExcludeFromCurrentConfiguration>
@@ -271,7 +300,13 @@
 		<MauiXaml Update="Modules\DatabaseFile\Page\FilePropertiesPopup.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="Modules\Export\Pages\ExportersPage.xaml">
+		<MauiXaml Update="Modules\Export\Exporters\Excel\View\Pages\ExcelExportersPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="Modules\Export\Exporters\Html\View\Pages\HtmlExportersPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="Modules\Export\Exporters\Pdf\View\Pages\PdfExportersPage.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 		<MauiXaml Update="Modules\Order\Pages\OrderDetailsPage.xaml">
@@ -286,10 +321,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Modules\Export\Services\" />
-		<Folder Include="Modules\Export\Exporters\Html\" />
 		<Folder Include="Modules\Export\Exporters\Pages\" />
-		<Folder Include="Modules\Export\Exporters\Pdf\" />
 		<Folder Include="Modules\Settings\Services\" />
 		<Folder Include="Properties\PublishProfiles\" />
 	</ItemGroup>
