--- a/KoOrderRegister/KoOrderRegister.csproj
+++ b/KoOrderRegister/KoOrderRegister.csproj
@@ -24,7 +24,9 @@
 		<Configurations>Debug;Release;DEV;DevBuild</Configurations>
 
 		<!-- Display name -->
-		<ApplicationTitle>Ko Order Register</ApplicationTitle>
+		<ApplicationTitle Condition="'$(Configuration)' == 'Release'">Ko Order Register</ApplicationTitle>
+		<ApplicationTitle Condition="'$(Configuration)' == 'DevBuild'">KOR Developer Build</ApplicationTitle>
+		<ApplicationTitle Condition="'$(Configuration)' == 'Debug'">KOR Debug Build</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId Condition="'$(Configuration)' == 'Release'">hu.kncsk.koorderregister</ApplicationId>
@@ -33,7 +35,7 @@
 		<ApplicationId Condition="'$(Configuration)' == 'DevBuild'">hu.kncsk.devbuild.koorderregister</ApplicationId>
 
 		<!-- Versions -->
-		<ApplicationDisplayVersion>999.999.999</ApplicationDisplayVersion>
+		<ApplicationDisplayVersion>99.99.99</ApplicationDisplayVersion>
 		<ApplicationVersion>2</ApplicationVersion>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
