--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ output
 KoOrderRegister/Technical/icon_creator/input
 KoOrderRegister/Technical/icon_creator/output
 
+KoOrderRegister/Technical/KoOrderRegister.csproj.bak
