--- a/KoOrderRegister/KoOrderRegister.csproj
+++ b/KoOrderRegister/KoOrderRegister.csproj
@@ -104,6 +104,7 @@
 		<!-- Splash Screen -->
 		<MauiSplashScreen Condition="'$(Configuration)' == 'Release'" Include="Resources\Splash\splash.svg" Color="#B0E0E6" BaseSize="128,128" />
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" />
+		<MauiSplashScreen Include="Resources\Splash\splash_dev.svg" />
 		<MauiSplashScreen Condition="'$(Configuration)' == 'DevBuild' or '$(Configuration)' == 'Debug'" Include="Resources\Splash\splash_dev.svg" Color="#B0E0E6" BaseSize="128,128" />
 
 		<!-- Images -->
