--- a/KoOrderRegister/KoOrderRegister.csproj
+++ b/KoOrderRegister/KoOrderRegister.csproj
@@ -102,10 +102,7 @@
 		<MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'" Include="Resources\AppIcon\appicontr.png" BaseSize="512,512" />
 	
 		<!-- Splash Screen -->
-		<MauiSplashScreen Condition="'$(Configuration)' == 'Release'" Include="Resources\Splash\splash.svg" Color="#B0E0E6" BaseSize="128,128" />
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" />
-		<MauiSplashScreen Include="Resources\Splash\splash_dev.svg" />
-		<MauiSplashScreen Condition="'$(Configuration)' == 'DevBuild' or '$(Configuration)' == 'Debug'" Include="Resources\Splash\splash_dev.svg" Color="#B0E0E6" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#B0E0E6" BaseSize="128,128" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
