--- a/KoOrderRegister/KoOrderRegister.csproj
+++ b/KoOrderRegister/KoOrderRegister.csproj
@@ -171,8 +171,8 @@
 		<None Remove="Resources\Images\key_light.svg" />
 		<None Remove="Resources\Images\labs_dark.svg" />
 		<None Remove="Resources\Images\labs_light.svg" />
-		<None Remove="Resources\Images\notification_dark.svg" />
-		<None Remove="Resources\Images\notification_light.svg" />
+		<None Remove="Resources\Images\notifications_dark.svg" />
+		<None Remove="Resources\Images\notifications_light.svg" />
 		<None Remove="Resources\Images\not_shared_icon_dark.svg" />
 		<None Remove="Resources\Images\not_shared_icon_light.svg" />
 		<None Remove="Resources\Images\open_dark.svg" />
@@ -343,11 +343,16 @@
 		<MauiXaml Update="Modules\Settings\Pages\SettingsPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="Modules\Windows\Notification\Pages\NotificationPages.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 	</ItemGroup>
 
 	<ItemGroup>
 		<Folder Include="Modules\Export\Exporters\Pages\" />
 		<Folder Include="Modules\Settings\Services\" />
+		<Folder Include="Modules\Windows\Notification\Services\" />
+		<Folder Include="Platforms\Windows\Modules\" />
 		<Folder Include="Properties\PublishProfiles\" />
 	</ItemGroup>
 
